vlib/v/checker/tests/prefix_err.out
vlib/v/checker/tests/prefix_err.vv:5:6: error: cannot take the address of true
    3 | }
    4 | 
    5 | b := &true
      |      ^
    6 | _ := &get()
    7 | _ := &(get())
vlib/v/checker/tests/prefix_err.vv:6:6: error: cannot take the address of get()
    4 | 
    5 | b := &true
    6 | _ := &get()
      |      ^
    7 | _ := &(get())
    8 | _ := &(get() + 1)
vlib/v/checker/tests/prefix_err.vv:7:6: error: cannot take the address of get()
    5 | b := &true
    6 | _ := &get()
    7 | _ := &(get())
      |      ^
    8 | _ := &(get() + 1)
    9 | _ := &10
vlib/v/checker/tests/prefix_err.vv:8:6: error: cannot take the address of get() + 1
    6 | _ := &get()
    7 | _ := &(get())
    8 | _ := &(get() + 1)
      |      ^
    9 | _ := &10
   10 | _ := &'Hi'
vlib/v/checker/tests/prefix_err.vv:9:6: error: cannot take the address of 10
    7 | _ := &(get())
    8 | _ := &(get() + 1)
    9 | _ := &10
      |      ^
   10 | _ := &'Hi'
   11 | _ := &'${b}'
vlib/v/checker/tests/prefix_err.vv:10:6: error: cannot take the address of 'Hi'
    8 | _ := &(get() + 1)
    9 | _ := &10
   10 | _ := &'Hi'
      |      ^
   11 | _ := &'${b}'
   12 | _ := &`c`
vlib/v/checker/tests/prefix_err.vv:11:6: error: cannot take the address of '${b}'
    9 | _ := &10
   10 | _ := &'Hi'
   11 | _ := &'${b}'
      |      ^
   12 | _ := &`c`
   13 | _ := &1.2
vlib/v/checker/tests/prefix_err.vv:12:6: error: cannot take the address of `c`
   10 | _ := &'Hi'
   11 | _ := &'${b}'
   12 | _ := &`c`
      |      ^
   13 | _ := &1.2
   14 | _ := &(1 + 2)
vlib/v/checker/tests/prefix_err.vv:13:6: error: cannot take the address of 1.2
   11 | _ := &'${b}'
   12 | _ := &`c`
   13 | _ := &1.2
      |      ^
   14 | _ := &(1 + 2)
   15 | s := '1.2'
vlib/v/checker/tests/prefix_err.vv:14:6: error: cannot take the address of 1 + 2
   12 | _ := &`c`
   13 | _ := &1.2
   14 | _ := &(1 + 2)
      |      ^
   15 | s := '1.2'
   16 | _ := &s.f64
vlib/v/checker/tests/prefix_err.vv:16:6: error: cannot take the address of s.f64
   14 | _ := &(1 + 2)
   15 | s := '1.2'
   16 | _ := &s.f64
      |      ^
   17 | _ := 12.3
   18 |
vlib/v/checker/tests/prefix_err.vv:20:5: error: invalid indirect of `int`, the type `int` is not a pointer
   18 |
   19 | a := 1
   20 | _ = *a
      |     ^
   21 | a <- 4
   22 |
vlib/v/checker/tests/prefix_err.vv:21:1: error: cannot push on non-channel `int`
   19 | a := 1
   20 | _ = *a
   21 | a <- 4
      | ^
   22 |
   23 | _ = ~true
vlib/v/checker/tests/prefix_err.vv:23:5: error: operator `~` can only be used with integer types, but the value after `~` is of type `bool` instead
   21 | a <- 4
   22 |
   23 | _ = ~true
      |     ^
   24 | _ = !4
   25 |
vlib/v/checker/tests/prefix_err.vv:24:5: error: operator `!` can only be used with bool types, but the value after `!` is of type `int literal` instead
   22 |
   23 | _ = ~true
   24 | _ = !4
      |     ^
   25 |
   26 | mut arr := [12, 4]
vlib/v/checker/tests/prefix_err.vv:27:11: error: cannot take the address of mutable array elements outside unsafe blocks
   25 |
   26 | mut arr := [12, 4]
   27 | _ := (&arr[1])
      |           ~~~
